# tidb-example-rs

./: .gitignore  Cargo.toml  Expected-Output.md  README.md  diesel.toml
cmd/: Cargo.toml
cmd/src/: error.rs  main.rs
domain/: Cargo.toml
domain/src/: error.rs  examples.rs  lib.rs  use_case.rs
domain/src/examples/: simple_example.rs  trade_example.rs
domain/src/services/: player.rs
domain/src/use_case/: cmd.rs
domain/src/use_case/cmd/: run_simple_and_trade.rs
domain/src/use_case/http/player/: bulk_create.rs  get.rs  get_count.rs  gets_by_limit.rs  trade.rs
http/: Cargo.toml  request.sh
http/src/: endpoints.rs  error.rs  main.rs  schema.rs
http/src/endpoints/: index.rs  player.rs
http/src/endpoints/player/: bulk_create.rs  get.rs  get_count.rs  gets_by_limit.rs  trade.rs
http/src/schema/: player.rs  player_bulk_create_result.rs  player_count.rs  player_option.rs  player_trade_result.rs  players.rs
migrations/2022-09-19-063037_init/: down.sql  up.sql
store/: Cargo.toml
store/src/: adapters.rs  conn.rs  error.rs  lib.rs  pool.rs  schema.rs
store/src/adapters/: player.rs
store/src/entities/: player.rs
