[package]
name = "tidb-example-cmd"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
repository = "https://github.com/kumanote/tidb-example-rs"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
clap = "3.2"


domain = { path = "../domain" }
store = { path = "../store" }

[dev-dependencies]
