[package]
name = "domain"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4"] }
store = { path = "../store" }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.9.0"
