[package]
name = "store"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["mysql", "chrono", "r2d2", "serde_json"] }
r2d2 = "0.8.9"

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.9.0"
tokio = { version = "1", features = ["full"] }
